k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: commodity-api
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: commodity-api
  ports:
    - port: 80
      targetPort: 8080
